--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -502,27 +502,26 @@ body > .container
   box-shadow: 0 1px 5px #1976d2
 
 
-
-textarea
-  width: 80%
-  position: relative
-  height: 40px
-  resize: none
-  margin: 7px auto auto 7px
-  padding: 7px 7px
-  outline: none
-  border: 1px solid #ececec
-  border-radius: 3px
-  font-family: 'Open Sans', sans-serif
-  color: #000
-  font-weight: 100
-  font-size: 15px
-  -webkit-transition: all .2s linear
-  transition: all .2s linear
-  -moz-transition: all .2s linear
-
-textarea:focus
-  border: 1px solid grey
+div#page-wrapper
+  textarea
+    width: 80%
+    position: relative
+    height: 40px
+    resize: none
+    margin: 7px auto auto 7px
+    padding: 7px 7px
+    outline: none
+    border: 1px solid #ececec
+    border-radius: 3px
+    font-family: 'Open Sans', sans-serif
+    color: #000
+    font-weight: 100
+    font-size: 15px
+    -webkit-transition: all .2s linear
+    transition: all .2s linear
+    -moz-transition: all .2s linear
+    &:focus
+      border: 1px solid grey
 
 .nav-wrapper .button-right-notify > i
   display: inline-block
