--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -16,14 +16,12 @@
 }
 
 .field > form input[type=text] {
-  float: right;
   position:relative;
   width: 300px;
   border: none;
-  height: 25px;
-  top: 7px;
+  height: 46px;
+    line-height: 46px;
   text-align: left;
-  display: block;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   box-shadow: none;
@@ -31,30 +29,19 @@
   transition: all .3s ease-in;
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
-  border-radius: 7px;
   background: #f0f0f0 url('/static/img/search-icon.png') no-repeat 95%;
   background-size: 13px;
   padding: 0 20px;
   color: black !important;
 }
 .field > form input[type=text]:focus {
-    background: #cccccc 1%;
+  background: #fefefe url(/static/img/search-icon.png) no-repeat 1%;
+  background-size: 13px;
+  border-bottom: 0;
 }
 .field > form input[type="text"] {
   transition: all .3s ease-in;
 }
-
-.field > form button {
-  padding: 0.6em 0.8em;
-  background-color: #3E9397;
-  color: white;
-  border: none;
-  font-weight: bold;
-  font-size: 1.2em;
-  height:34px;
-  width:70px;
-}.btn {
-  cursor: pointer; }
 
 #search-noelements {
     width: 40%;
