--- a/skyfolk/templates/account/menu-horizontal.html
+++ b/skyfolk/templates/account/menu-horizontal.html
@@ -1,6 +1,6 @@
 <ul class="left hide-on-med-and-down">
                 <li><a href="/inicio" class="blue-text text-darken-1"> <i class="material-icons">home</i></a></li>
-                <li id="publish2"><a class="blue-text text-darken-1"><i class="material-icons">message</i></a></li>
+                <li id="publish2"><a class="blue-text text-darken-1"><i class="material-icons">create</i></a></li>
                 <li><a href="/following/{{ request.user.username }}" class="blue-text text-darken-1"><i class="material-icons">people</i></a></li>
                 <li id="agregar-amigo"> <a class="blue-text text-darken-1"><i class="material-icons">add</i></a></li>
                 <li><a href="{% url 'account_logout' %}" class="blue-text text-darken-1"><i class="material-icons">exit_to_app</i></a></li>
