--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -16,8 +16,8 @@ html {
   margin-top: 5%;
   margin-bottom: 1em; }
 
-.body-wrapper {
-  margin: auto; }
+.body-wrapper, .compose-body, .compose-outbox, .compose-trash, .body-view {
+  margin-top: 1.3em; }
 
 #new_message {
   padding: 10px 20px;
@@ -70,88 +70,9 @@ html {
   margin-bottom: 50px;
   left: 45px; }
 
-.compose_table textarea {
-  border: none;
-  border-bottom: solid 2px #c9c9c9;
-  transition: border 0.3s;
-  outline: none;
-  background-color: transparent;
-  height: 100%;
-  font-size: 1.3em;
-  color: #212121; }
-
-.compose_table textarea:focus {
-  border-bottom: solid 2px #1E88E5; }
-
-label[for="id_recipient"] {
-  display: none; }
-
-label[for="id_subject"] {
-  display: none; }
-
-label[for="id_body"] {
-  display: none; }
-
-#id_recipient, #id_subject {
-  padding: 10px 5px;
-  border: none;
-  border-bottom: solid 2px #c9c9c9;
-  transition: border 0.3s;
-  outline: none;
-  width: 79%;
-  background-color: transparent;
-  margin-left: 6.5%; }
-
-#id_recipient:focus, #id_subject:focus {
-  border-bottom: solid 2px #1E88E5; }
-
 .time {
   font-size: 0.9em;
   font-style: normal; }
-
-.compose-button {
-  border: medium none;
-  border-radius: 2px;
-  display: inline-block;
-  height: 36px;
-  line-height: 36px;
-  padding: 0 2rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #1e88e5;
-  background-color: transparent;
-  text-align: center;
-  letter-spacing: 0.5px;
-  transition: all 0.2s ease-out 0s;
-  cursor: pointer;
-  margin-top: -10%;
-  margin-right: 10px;
-  position: relative;
-  float: right;
-  outline: none; }
-
-.compose-button:hover, .compose-view-button:hover {
-  opacity: 0.8;
-  background-color: #eee;
-  color: grey; }
-
-.compose-view-button {
-  border: medium none;
-  border-radius: 2px;
-  display: inline-block;
-  height: 36px;
-  line-height: 36px;
-  padding: 0 2rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #1e88e5;
-  background-color: transparent;
-  text-align: center;
-  letter-spacing: 0.5px;
-  transition: all 0.2s ease-out 0s;
-  cursor: pointer;
-  float: right;
-  outline: none; }
 
 .outbox_sent {
   border-bottom: 1px solid #e0e0e0; }
@@ -205,9 +126,8 @@ label[for="id_body"] {
   font-size: 1.3em;
   color: #212121; }
 
-.wrapper-config-menu {
-  position: relative;
-  margin-right: 10%; }
+.wrapper-config-menu, .wrapper-config-menu-contact {
+  position: relative; }
 
 .menu-config {
   position: relative;
@@ -356,7 +276,7 @@ label[for="id_body"] {
   padding: 10px 10px 10px 50px; }
 
 /* VIEW */
-.wrapper-message {
+.body-view blockquote {
   width: 80%;
   height: auto;
   min-height: 50px;
@@ -365,7 +285,7 @@ label[for="id_body"] {
   position: relative;
   padding: 10px;
   display: inline-block; }
-  .wrapper-message:before {
+  .body-view blockquote:before {
     content: "";
     position: absolute;
     bottom: 0;
