--- a/skyfolk/templates/django_messages/outbox.html
+++ b/skyfolk/templates/django_messages/outbox.html
@@ -2,9 +2,10 @@
 {% load i18n %}
 {% load url from future %}
 
+{% block title %}<title>{% trans "Sent Messages" %}</title>{% endblock %}
+
 {% block body %}
-<h3 class="outbox_title">{% trans "Sent Messages" %}</h3>
-<div class="col-lg-6 col-md-12 col-sm-12">
+<div class="col l8 m12 s12 compose-outbox">
 {% if message_list %}
 <table class="messages">
     <thead>
@@ -23,8 +24,8 @@
 {% endfor %}
     </tbody>
 </table>
-</div>
 {% else %}
 <p class="no-msg">{% trans "No messages." %}</p>
 {% endif %}
+    </div>
 {% endblock %}
