--- a/skyfolk/templates/django_messages/trash.html
+++ b/skyfolk/templates/django_messages/trash.html
@@ -1,10 +1,9 @@
 {% extends "django_messages/base.html" %}
 {% load i18n %}
 {% load url from future %}
-
+{% block title %}<title>{% trans "Deleted Messages" %}</title>{% endblock %}
 {% block body %}
-<h3 class="trash_tittle">{% trans "Deleted Messages" %}</h3>
-<div class="col-lg-6 col-md-12 col-sm-12">
+<div class="col l8 m12 s12 compose-trash">
 {% if message_list %}
 <table class="messages">
     <thead>
@@ -12,7 +11,7 @@
     </thead>
     <tbody>
 {% for message in message_list %}
-<div class="col-lg-12 col-md-12 col-sm-12 table-body">
+<div class="col l8 m12 s12 table-body">
     <tr>
         <td>{{ message.sender }}</td>
         <td>
@@ -30,5 +29,5 @@
         {% endif %}
         <br />
         <div class="no-msg">{% trans "Deleted Messages are removed from the trash at unregular intervals, don't rely on this feature for long-time storage." %}</div>
+    </div>
 {% endblock %}
-</div>
