--- a/skyfolk/templates/django_messages/view.html
+++ b/skyfolk/templates/django_messages/view.html
@@ -1,10 +1,10 @@
 {% extends "django_messages/base.html" %}
 {% load i18n %}
 {% load url from future %}
-
+{% block title %}<title>Mensajes con {{  message.sender }}</title>{% endblock %}
 {% block body %}
-<h3 class="view_tittle">Mensajes con {{  message.sender }}.</h3>
-      <div class="col-lg-6 col-md-12 col-sm-12 body-view">
+<h3 class="view_tittle"></h3>
+      <div class="col l8 m12 s12 body-view">
         <dl class="grey lighten-5 message-headers">
             <dt>{% trans "Subject" %}</dt>
             <dd><strong>{{ message.subject }}</strong></dd>
@@ -19,9 +19,13 @@
         {% endblock %}
     <blockquote>{{ message.body|safe|linebreaksbr }}</blockquote><br /><br />
     {% ifequal message.recipient.pk user.pk %}
-    <a href="{% url 'messages_reply' message.id %}" class="compose-view-button" type="submit" value="{% trans "Send" %} &raquo;"/>{% trans "Reply" %}</a>
+        <a href="{% url 'messages_reply' message.id %}" class="btn waves-effect waves-light right" type="submit" value="{% trans "Send" %} &raquo;"/>{% trans "Reply" %}
+            <i class="material-icons right">reply</i>
+        </a>
     {% endifequal %}
-    <a href="{% url 'messages_delete' message.id %}" class="compose-view-button" type="submit" value="{% trans "Send" %} &raquo;"/>{% trans "Delete" %}</a>
+        <a href="{% url 'messages_delete' message.id %}" class="btn waves-effect waves-light right" type="submit" value="{% trans "Send" %} &raquo;"/>{% trans "Delete" %}
+            <i class="material-icons right">delete</i>
+        </a>
     {% comment %}Example reply_form integration
     {% if reply_form %}
     <h1>{% trans "Compose reply"%}</h1>
