--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -45,7 +45,8 @@
     {% endblock %}
     <!-- Form para nuevo mensaje -->
   {% if user.is_authenticated %}
-  <div id="page-wrapper" style="display:none;">
+      <div class="row">
+  <div id="page-wrapper" class="col l5 m12 s12" style="display:none;">
   <div class="row">
         <div id="status" class="col s12 title-page-wrapper">
             {% if user == user_profile %}
@@ -75,13 +76,14 @@
                 <button type="submit" id="sendformpubli" class="waves-effect waves-light btn right blue">Enviar<i class="material-icons right">send</i></button>
                 <button type="button" id="close" class="waves-effect waves-light btn right transparent black-text">Cerrar<i class="material-icons right">close</i></button>
                 <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-                <button class="waves-effect waves-light btn left blue"><i class="material-icons">import_contacts</i></button>
-                <button class="waves-effect waves-light btn left blue"><i class="material-icons">attach_file</i></button>
-                <button class="waves-effect waves-light btn left blue"><i class="material-icons">location_on</i></button>
+                <button title="Importar usuarios" class="waves-effect waves-light btn left blue"><i class="material-icons">import_contacts</i></button>
+                <button title="Adjuntar archivo" class="waves-effect waves-light btn left blue"><i class="material-icons">attach_file</i></button>
+                <button title="Localización" class="waves-effect waves-light btn left blue"><i class="material-icons">location_on</i></button>
             </div>
         </div>
     </form>
   </div>
+      </div>
   <!-- Atajos del usuario -->
   <div id="atajos-keyboard-profile">
     <table class="modal-table" summary="Atajos para acciones comunes.">
