--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -1,15 +1,22 @@
 {% comment %}
   Nueva respuesta a una publicacion
 {% endcomment %}
-<div class="row">
-    <div class="col s12">
-        <div class="hidden" id="caja-comentario-{{ pub.pk }}" >
-          <div class="triangle-reply"></div>
-          <!-- REPLY FORM -->
-          <form class="reply-form" action="" method="post">{% csrf_token %}
-            {{ reply_publication_form }}
-            <button type="submit" class="enviar" id="reply-{{ pub.pk }}"><i class="fa fa-paper-plane-o"></i></button>
-          </form>
+<div class="hidden" id="caja-comentario-{{ pub.pk }}" >
+    <!-- REPLY FORM -->
+    <form class="reply-form" action="" method="post">{% csrf_token %}
+        {{ reply_publication_form.author }}
+        {{ reply_publication_form.board_owner }}
+        {{ reply_publication_form.parent }}
+        <div class="row">
+            <div class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                          {{ reply_publication_form.content }}
+                          <label for="message-reply">Escribe tu mensaje aqui...</label>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+        <button type="submit" class="waves-effect waves-light btn right blue enviar" id="reply-{{ pub.pk }}"><i class="material-icons right">send</i>Enviar</button>
+    </form>
 </div>
