--- a/skyfolk/static/css/password_recommendation.css
+++ b/skyfolk/static/css/password_recommendation.css
@@ -1,2 +1,33 @@
-body{background-color:#bbdefb}.container{color:#263238;background-color:#fff;width:90%}.container .head-title,.container .p-title{margin-left:2%}.container .tip-1{background-color:#2196f3}.container .p-tip-1{margin-left:2%}.container .tip-2{background-color:#1e88e5}.container .tips-examples{margin-left:2%}.container .tip-3{background-color:#1976d2}.back-div{position:relative;margin:auto;width:120px;height:120px;cursor:pointer}.back-div .back-image{width:100%;height:100%;display:block}
+body {
+  background-color: #bbdefb; }
+
+.container {
+  color: #263238;
+  background-color: #fff;
+  width: 90%;
+  margin: auto; }
+  .container .head-title, .container .p-title {
+    margin-left: 2%; }
+  .container .tip-1 {
+    background-color: #2196f3; }
+  .container .p-tip-1 {
+    margin-left: 2%; }
+  .container .tip-2 {
+    background-color: #1e88e5; }
+  .container .tips-examples {
+    margin-left: 2%; }
+  .container .tip-3 {
+    background-color: #1976d2; }
+
+.back-div {
+  position: relative;
+  margin: auto;
+  width: 120px;
+  height: 120px;
+  cursor: pointer; }
+  .back-div .back-image {
+    width: 100%;
+    height: 100%;
+    display: block; }
+
 /*# sourceMappingURL=password_recommendation.css.map */
