--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -86,17 +86,15 @@
       </div>
   <!-- Atajos del usuario -->
   <div id="atajos-keyboard-profile">
-    <table class="modal-table" summary="Atajos para acciones comunes.">
-      <div class="atajos-title">
+    <table class="responsive-table highlight modal-table" summary="Atajos para acciones comunes.">
+      <caption class="atajos-title">
       Atajos de teclado
       <i class="fa fa-close"></i>
-      </div>
+      </caption>
         <thead>
-        <div class="acc-atajos-div">
           <tr class="acc-atajos">
             <th colspan="2">Acciones</th>
           </tr>
-          </div>
         </thead>
         <tbody>
           <tr>
