--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -1,2 +1,245 @@
-@font-face{font-family:"Open Sans";font-weight:400;font-style:normal;src:url("../fonts/Open-Sans-regular/Open-Sans-regular.eot");src:url("../fonts/Open-Sans-regular/Open-Sans-regular.eot?#iefix") format("embedded-opentype"),local("Open Sans"),local("Open-Sans-regular"),url("../fonts/Open-Sans-regular/Open-Sans-regular.woff2") format("woff2"),url("../fonts/Open-Sans-regular/Open-Sans-regular.woff") format("woff"),url("../fonts/Open-Sans-regular/Open-Sans-regular.ttf") format("truetype"),url("../fonts/Open-Sans-regular/Open-Sans-regular.svg#OpenSans") format("svg")}@font-face{font-family:"Pacifico";font-weight:400;font-style:normal;src:url("../fonts/Pacifico-regular/Pacifico-regular.eot");src:url("../fonts/Pacifico-regular/Pacifico-regular.eot?#iefix") format("embedded-opentype"),local("Pacifico Regular"),local("Pacifico-regular"),url("../fonts/Pacifico-regular/Pacifico-regular.woff2") format("woff2"),url("../fonts/Pacifico-regular/Pacifico-regular.woff") format("woff"),url("../fonts/Pacifico-regular/Pacifico-regular.ttf") format("truetype"),url("../fonts/Pacifico-regular/Pacifico-regular.svg#Pacifico") format("svg")}body{padding:0;margin:auto;background-size:100%;max-width:100%;min-height:100%;flex-direction:column;background-repeat:no-repeat;flex-wrap:wrap}#background_cycler{padding:0;margin:0;width:100%;height:100%;position:absolute;top:0;left:0;z-index:-1}#background_cycler img{position:fixed;width:100%;min-height:100%;z-index:1}#background_cycler img.active{z-index:3}.namesn{position:relative;display:block;width:200px;height:120px;margin:auto auto 10px}.namesn i{color:#1e88e5;text-shadow:1px 1px 1px #ccc}.namesn h5{position:relative;left:87px;font-size:5em;text-decoration:none;color:#555;letter-spacing:0.5px;display:inline-block;font-family:"Pacifico",cursive;top:0;text-shadow:1px 1px 1px #1e88e5}.logo{position:relative;margin:auto;left:-120px;top:110px;width:150px;height:100px;cursor:pointer}.logo img{width:100px;height:100px;position:absolute;top:12px;left:0}.footer_base{width:100%;position:fixed;height:auto;padding:10px;bottom:0;-webkit-transition:all 0.1s ease-in-out;-moz-transition:all 0.1s ease-in-out;transition:all 0.1s ease-in-out;box-shadow:0 1px 5px rgba(0,0,0,0.15);background-color:rgba(255,255,255,0.8);text-align:center}.footer_base a{color:#616161;font-family:"Open Sans",sans-serif;-moz-transtion:all 0.2s ease-in;-webkit-transition:all 0.2s ease-in;transition:all 0.2s ease-in;cursor:pointer;text-decoration:none;display:inline-block;position:relative}.footer_base a:hover{color:#1e88e5}.footer_base #about,.footer_base #blog,.footer_base #tutorial,.footer_base #empleo,.footer_base #anunciarse,.footer_base #privacidad{margin-left:7%}.footer_base .left{font-weight:600;position:absolute;left:0.5%}.flex{position:relative;margin:auto;width:40px;height:40px;top:-20px}#login{width:370px;height:390px;margin:auto;position:relative;display:block;top:120px;border-radius:1px;font-family:"Open Sans",sans-serif;box-shadow:0 55px 2px rgba(0,0,0,0.2);z-index:9999}#login label,.block-formregister label{color:grey;font-size:1em}#login label[for="id_password"]{top:15px}form{position:relative;top:23px;font-family:"Open Sans",sans-serif;color:#000}.links{float:left}.form-3 label{position:relative;text-align:center;font-family:"Open Sans",sans-serif;font-weight:100;left:30px}.forgot_pswd{position:absolute;display:block;margin-top:120px;height:60px;width:100%;background-color:#fff !important;right:0;left:0;margin-left:auto;margin-right:auto;border-top:2px solid #bdbdbd;text-align:center;border-bottom-left-radius:3px;border-bottom-right-radius:3px;box-shadow:0 1px 5px rgba(0,0,0,0.15)}.forgot_pswd>.secondaryAction{font-size:16px;margin:auto}#id_remember{left:60%;display:inherit;bottom:45px}.form-3 label[for="id_remember"]{left:35%;font-size:1.01121em;font-weight:100;bottom:40px;position:absolute}.form-3 input[type="text"]{width:70%;position:relative;margin:auto;outline:none;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;transition:all 0.3s linear}.form-3 input[type="email"]{width:70%;position:relative;margin:auto;outline:none;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;transition:all 0.3s linear}.form-3 input[type=password]{width:70%;position:relative;margin:20px auto auto;outline:none;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;transition:all 0.3s linear}.form-3 input:focus{background-position:5px}.row h5{position:absolute;left:0;text-align:center;color:#757575;border-bottom:1px solid #bdbdbd;width:100%;margin:auto auto 10px;font-weight:100;font-family:"Open Sans",sans-serif}.errorlist li{color:#f44336;display:inline-block;position:relative}.form-3 a{margin-left:60px;position:relative;top:13px}.block-formregister{width:320px;height:auto;background-color:#fff;position:relative;top:-30px;float:right;margin-right:130px;font-family:"Open Sans",sans-serif;border-radius:3px;box-shadow:0 1px 5px rgba(0,0,0,0.15);display:block;padding:0 0 30px;margin-bottom:5%}.block-formregister #sign_in_register,.block-formregister #sign_up_register{position:relative;display:inline-block;width:135px;margin:3px auto auto 7px;z-index:0}.block-formregister #iniciar_sesion,.block-formregister #registrar{position:relative;margin:-20px auto auto;display:inline-block}.block-formregister .reco-passwd{position:absolute;right:0;margin:5px 7px 0 0;cursor:pointer;color:#1e88e5}.block-formregister .reco-passwd:hover{text-shadow:1px 1px 1px #ccc;transform:scale(1.1);-webkit-transform:scale(1.1);-moz-transform:scale(1.1);-o-transform:scale(1.1);-ms-transform:scale(1.1)}@media screen and (min-width: 700px) and (orientation: landscape){.register{left:120px}}@media screen and (min-width: 1200px){.register{left:150px}}@media screen and (max-width: 600px){.block-formregister{margin:auto;top:-80px;float:none}#background_cycler{height:100%}.footer_base{display:none}.namesn{margin-top:-10%}#login{width:350px}}.form-3 .form-group{height:56%;width:100%}.form-3{height:100%;width:100%;padding:10px}.form-3 p{padding-bottom:10px}.form-3 input{margin:0 auto;display:block}.form-3 input[type="checkbox"]{display:inline;float:right;margin-right:55px}.form-3 #registrar{float:right;position:relative;margin-top:-50px;display:inline-block;margin-right:7px}.form-3 #iniciar_sesion{float:left;margin-left:7px;margin-top:54px;display:inline-block;position:relative}::-webkit-input-placeholder{color:#212121}:-moz-placeholder{color:#212121;opacity:1}::-moz-placeholder{color:#212121;opacity:1}:-ms-input-placeholder{color:#212121}::-placeholder-shown{color:#212121}input[type="text"]:focus,input[type="password"]:focus,input[type="email"]:focus{border-bottom:1px solid #64B5F6 !important;box-shadow:0 1px 0 0 #64B5F6 !important}@media screen and (max-height: 700px) and (min-width: 800px){#login{top:50px}.namesn{top:-80px}}
+@charset "UTF-8";
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Open-Sans-regular/Open-Sans-regular.eot");
+  src: url("../fonts/Open-Sans-regular/Open-Sans-regular.eot?#iefix") format("embedded-opentype"), local("Open Sans"), local("Open-Sans-regular"), url("../fonts/Open-Sans-regular/Open-Sans-regular.woff2") format("woff2"), url("../fonts/Open-Sans-regular/Open-Sans-regular.woff") format("woff"), url("../fonts/Open-Sans-regular/Open-Sans-regular.ttf") format("truetype"), url("../fonts/Open-Sans-regular/Open-Sans-regular.svg#OpenSans") format("svg"); }
+@font-face {
+  font-family: "Pacifico";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/Pacifico-regular/Pacifico-regular.eot");
+  src: url("../fonts/Pacifico-regular/Pacifico-regular.eot?#iefix") format("embedded-opentype"), local("Pacifico Regular"), local("Pacifico-regular"), url("../fonts/Pacifico-regular/Pacifico-regular.woff2") format("woff2"), url("../fonts/Pacifico-regular/Pacifico-regular.woff") format("woff"), url("../fonts/Pacifico-regular/Pacifico-regular.ttf") format("truetype"), url("../fonts/Pacifico-regular/Pacifico-regular.svg#Pacifico") format("svg"); }
+body {
+  padding: 0;
+  margin: auto;
+  background-size: 100%;
+  max-width: 100%;
+  min-height: 100%;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  flex-wrap: wrap; }
+
+.signup {
+  padding: 10px; }
+
+.login {
+  padding-right: 10px;
+  padding-left: 10px; }
+
+/* Random Background */
+#background_cycler {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; }
+  #background_cycler img {
+    position: fixed;
+    width: 100%;
+    min-height: 100%;
+    z-index: 1; }
+  #background_cycler img.active {
+    z-index: 3; }
+
+/* LOGO */
+.namesn {
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 120px;
+  margin: auto auto 10px; }
+  .namesn i {
+    color: #1e88e5;
+    text-shadow: 1px 1px 1px #ccc; }
+  .namesn h5 {
+    position: relative;
+    left: 87px;
+    font-size: 5em;
+    text-decoration: none;
+    color: #555;
+    letter-spacing: 0.5px;
+    display: inline-block;
+    font-family: "Pacifico", cursive;
+    top: 0;
+    text-shadow: 1px 1px 1px #1e88e5; }
+
+.logo {
+  position: relative;
+  margin: auto;
+  left: -120px;
+  top: 110px;
+  width: 150px;
+  height: 100px;
+  cursor: pointer; }
+  .logo img {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 12px;
+    left: 0; }
+
+.footer_base {
+  width: 100%;
+  position: fixed;
+  height: auto;
+  padding: 10px;
+  bottom: 0;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center; }
+  .footer_base a {
+    color: #616161;
+    font-family: "Open Sans", sans-serif;
+    -moz-transtion: all 0.2s ease-in;
+    -webkit-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+    position: relative; }
+  .footer_base a:hover {
+    color: #1e88e5; }
+  .footer_base #about, .footer_base #blog, .footer_base #tutorial, .footer_base #empleo, .footer_base #anunciarse, .footer_base #privacidad {
+    margin-left: 7%; }
+  .footer_base .left {
+    font-weight: 600;
+    position: absolute;
+    left: 0.5%; }
+
+.flex {
+  position: relative;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  top: -20px; }
+
+#login {
+  width: 370px;
+  margin: auto;
+  position: relative;
+  display: block;
+  top: 120px;
+  border-radius: 7px;
+  font-family: "Open Sans", sans-serif;
+  z-index: 9999;
+  color: black; }
+
+.links {
+  float: left; }
+
+/* Estilos para el botón ¿olvido su contraseña? */
+.forgot-pass {
+  text-align: center;
+  border-top: 3px solid #eee;
+  margin-bottom: 0 !important; }
+
+.remember-check {
+  text-align: center; }
+
+.row h5 {
+  text-align: center;
+  color: #757575;
+  border-bottom: 1px solid #bdbdbd;
+  margin: auto auto 10px;
+  font-weight: 100;
+  font-family: "Open Sans", sans-serif; }
+
+/* Muestra los mensajes de error, por ejemplo -> "Contraseña incorrecta en los forms" */
+.errorlist li {
+  color: #f44336;
+  display: inline-block;
+  position: relative; }
+
+.block-formregister {
+  background-color: #fff;
+  position: relative;
+  float: right;
+  margin-right: 130px;
+  font-family: "Open Sans", sans-serif;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  padding: 0 0 30px;
+  margin-bottom: 5%; }
+  .block-formregister .reco-passwd {
+    position: absolute;
+    right: 0;
+    margin: 5px 7px 0 0;
+    cursor: pointer;
+    color: #1e88e5; }
+    .block-formregister .reco-passwd:hover {
+      text-shadow: 1px 1px 1px #ccc;
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      -ms-transform: scale(1.1); }
+
+/* Adaptamos el background del login dependiendo de la altura de la pagina */
+@media screen and (min-width: 700px) and (orientation: landscape) {
+  .register {
+    left: 120px; } }
+@media screen and (min-width: 1200px) {
+  .register {
+    left: 150px; } }
+@media screen and (max-width: 600px) {
+  .block-formregister {
+    margin: auto;
+    float: none; }
+
+  #background_cycler {
+    height: 100%; }
+
+  .footer_base {
+    display: none; }
+
+  .namesn {
+    margin-top: -10%; }
+
+  #login {
+    width: 350px; } }
+.form-3 .form-group {
+  margin-top: 1.25%; }
+
+/* WebKit, Blink, Edge */
+::-webkit-input-placeholder {
+  color: #212121; }
+
+/* Mozilla Firefox 4 to 18 */
+:-moz-placeholder {
+  color: #212121;
+  opacity: 1; }
+
+/* Mozilla Firefox 19+ */
+::-moz-placeholder {
+  color: #212121;
+  opacity: 1; }
+
+/* Internet Explorer 10-11 */
+:-ms-input-placeholder {
+  color: #212121; }
+
+/* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
+::-placeholder-shown {
+  color: #212121; }
+
+/* INPUT COLOR FOCUS */
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
+  border-bottom: 1px solid #64B5F6 !important;
+  box-shadow: 0 1px 0 0 #64B5F6 !important; }
+
+@media screen and (max-height: 700px) and (min-width: 800px) {
+  #login {
+    top: 50px; }
+
+  .namesn {
+    top: -80px; } }
+
 /*# sourceMappingURL=login-signup.css.map */
