--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -22,7 +22,7 @@
 	{% endblock %}
     </head>
     <body>
-    <div class="namesn">
+    <div class="hide-on-small-only namesn">
         <div onclick="javascript:location.href='/'" class="logo">
                 <h5><i>S</i>kyfolk.</h5>
                 <img src="{{STATIC_URL}}img/logo.png">
@@ -33,7 +33,7 @@
   </div>
        {% block content %}{% endblock %}
     <div class="footer_base">
-      <div class="col s3 m3 l12 footer-copyright">
+      <div class="col s12 footer-copyright">
             <div class="container">
             <a class="left">© Skyfolk 2016</a>
             <a id="about" href="/about/home">Sobre Skyfolk</a>
