--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -8,22 +8,24 @@
 
 {% block content %}
     <div class="container">
-    <div class="col-lg-12 col-md-12 col-sm-12 wrapper-news">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/news.css" />
-    {% for pub in publications %}
-        <div class="col-lg-3 col-md-12 col-sm-12 notice-item">
-            <div class="col-lg-3 col-md-2 col-sm-3 img">
-	                {% avatar pub.author.username %}
-            </div>
-            <div class="col-lg-8 col-md-9 col-sm-8 author">
-                <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a><i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
-                <i class="pub-date">{{ pub.created }}</i>
-            </div>
-            <div class="col-lg-9 col-md-10 col-sm-9 contenido">
-                <p>{{pub.content}}</p>
+        <div class="row">
+            <div class="col l12 m12 s12 wrapper-news">
+            <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/news.css" />
+            {% for pub in publications %}
+                <div class="col l3 m12 s12 notice-item">
+                    <div class="col l3 m2 s3 img">
+                            {% avatar pub.author.username %}
+                    </div>
+                    <div class="col l8 m9 s8 author">
+                        <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a><i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
+                        <i class="pub-date">{{ pub.created }}</i>
+                    </div>
+                    <div class="col l9 m10 s9 contenido">
+                        <p>{{pub.content}}</p>
+                    </div>
+                </div>
+            {% endfor %}
             </div>
         </div>
-    {% endfor %}
-    </div>
     </div>
 {% endblock %}
